--- a/examples/websockets/ws-web.html
+++ b/examples/websockets/ws-web.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset='utf-8'>
-    <title>Websocket's Test</title>
-    <script type='text/javascript' src='../../bundle.js'></script>
+    <head>
+        <meta charset="utf-8" />
+        <title>Websocket's Test</title>
+        <script type="text/javascript" src="../../bundle.js"></script>
 
-    <script type="module">
-
-        /*
+        <script type="module">
+            /*
         const wsClient = new window.WebSocket('wss://labnet.massa.net/api/websocket');
 
         wsClient.onclose = () => {
@@ -41,53 +40,62 @@
         };
         */
 
-        try {
-            const baseAccount = await window.massa.WalletClient.getAccountFromSecretKey("S1PNNeC922hHaveiosug8GzLidmbfHeu57GnUZsXcbtQm5Gfdfy");
-            const web3Client = await window.massa.ClientFactory.createDefaultClient(window.massa.DefaultProviderUrls.LABNET, true, baseAccount);
-            const wsClient = web3Client.ws();
+            try {
+                const baseAccount =
+                    await window.massa.WalletClient.getAccountFromSecretKey(
+                        "S1PNNeC922hHaveiosug8GzLidmbfHeu57GnUZsXcbtQm5Gfdfy"
+                    );
+                const web3Client =
+                    await window.massa.ClientFactory.createDefaultClient(
+                        window.massa.DefaultProviderUrls.LABNET,
+                        true,
+                        baseAccount
+                    );
+                const wsClient = web3Client.ws();
 
-            // bind various methods for handling common socket events
-            wsClient.on(window.massa.WebsocketEvent.ON_CLOSED, () => {
-                console.log("ws closed");
-            });
+                // bind various methods for handling common socket events
+                wsClient.on(window.massa.WebsocketEvent.ON_CLOSED, () => {
+                    console.log("ws closed");
+                });
 
-            wsClient.on(window.massa.WebsocketEvent.ON_CLOSING, () => {
-                console.log("ws closing");
-            });
+                wsClient.on(window.massa.WebsocketEvent.ON_CLOSING, () => {
+                    console.log("ws closing");
+                });
 
-            wsClient.on(window.massa.WebsocketEvent.ON_CONNECTING, () => {
-                console.log("ws connecting");
-            });
+                wsClient.on(window.massa.WebsocketEvent.ON_CONNECTING, () => {
+                    console.log("ws connecting");
+                });
 
-            wsClient.on(window.massa.WebsocketEvent.ON_OPEN, () => {
-                console.log("ws open");
-            });
+                wsClient.on(window.massa.WebsocketEvent.ON_OPEN, () => {
+                    console.log("ws open");
+                });
 
-            wsClient.on(window.massa.WebsocketEvent.ON_PING, () => {
-                console.log("ws ping");
-            });
+                wsClient.on(window.massa.WebsocketEvent.ON_PING, () => {
+                    console.log("ws ping");
+                });
 
-            wsClient.on(window.massa.WebsocketEvent.ON_ERROR, (errorMessage) => {
-                console.error("ws error", errorMessage);
-            });
+                wsClient.on(
+                    window.massa.WebsocketEvent.ON_ERROR,
+                    (errorMessage) => {
+                        console.error("ws error", errorMessage);
+                    }
+                );
 
-            // connect to ws
-            await wsClient.connect();
-            console.log("Ws Connection successfully established!");
+                // connect to ws
+                await wsClient.connect();
+                console.log("Ws Connection successfully established!");
 
-            // subscribe to new blocks
-            wsClient.subscribeFilledBlocks((newBlock) => {
-                console.log("New Filled Block Received", newBlock);
-            });
-        } catch (ex) {
-            console.log("Error occurred", ex);
-        }
+                // subscribe to new blocks
+                wsClient.subscribeFilledBlocks((newBlock) => {
+                    console.log("New Filled Block Received", newBlock);
+                });
+            } catch (ex) {
+                console.log("Error occurred", ex);
+            }
+        </script>
+    </head>
 
-    </script>
-
-  </head>
-
-  <body>
-    <p>Massa Websockets Demo for Browser</p>
-  </body>
+    <body>
+        <p>Massa Websockets Demo for Browser</p>
+    </body>
 </html>
